--- a/player.html
+++ b/player.html
@@ -1,135 +1,6 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<style>
-.logo-container {
-                position: absolute;
-                top: 5px;
-                left: 5px;
-                width: 60px;
-                height: 60px;
-            }
-
-#logo {
-                position: fixed;
-                background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/640px-Telegram_2019_Logo.svg.png");
-                background-size: cover;
-                background-position: center;
-            }
-   .plyr {
-                height: 100%;
-                width: 100%;
-            }
-.float {
-                height: 60px;
-                width: 60px;
-                z-index: 10;
-                border-radius: 50px;
-                box-shadow: 2px 2px 3px #999;
-            }
-.label-container{
-             position: relative;
-                top: 5px;
-                left:70px;
-                display:table;
-                visibility: hidden;
-            }
-
-            .label-text{
-                color:#FFF;
-                background:rgba(51,51,51,0.5);
-                display:table-cell;
-                vertical-align:middle;
-                padding:10px;
-                border-radius:3px;
-            }
-
-            .label-arrow{
-                display:table-cell;
-                vertical-align:middle;
-                color:#333;
-                opacity:0.5;
-                transform: scaleX(-1);
-            }
-
-            a.float + div.label-container {
-              visibility: hidden;
-              opacity: 0;
-              transition: visibility 0s, opacity 0.5s ease;
-            }
-
-            a.float:hover + div.label-container{
-              visibility: visible;
-              opacity: 1;
-            }
-</style>
-
-
-</div>
-</div>
-<div class="logo-container">
- <a href="https://t.me/BDS5G" target="_blank" rel="noopener noreferrer" class="float" id="logo"></a>
-            <div class="label-container">
-                <i class="fa fa-play label-arrow"></i>
-                <div class="label-text">Telegram</div>
-            </div>
-</div>
-  
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Player</title>
-    <meta name="referrer" content="same-origin">
-      <style type="text/css">
-        *,*::before,*::after{ box-sizing: border-box;margin:0;padding:0;list-style: none; }
-        html,body{ width: 100%;height:100%; overflow: hidden;}
-        .stationLogo {position: absolute;right: -20px;top: 10px;display: block;height: 40px;z-index: 99998;}
-    </style>
-</head>
-<body style="margin:0px; height:100%;">
-
-<div id="player" style="width:100%;height:100%;overflow:hidden;"></div>
-
-    <script type="text/javascript">
-      
-        function $(id){
-    return document.getElementById(id);
-}
-function dw(str){
-    document.write(str);
-}
-function J_get(name, url)
-{
-    url  = url?url:self.window.document.location.href;
-    var start   = url.indexOf(name + '=');
-    if (start == -1) return '';
-    var len = start + name.length + 1;
-    var end = url.indexOf('######',len);
-    if (end == -1) end = url.length;
-    return unescape(url.substring(len,end));
-}
-
-id = J_get('id'); 
-                
-var gid = encodeURIComponent(id);
-    </script>
-<script type="text/javascript">
-var isiPad = navigator.userAgent.match(/iPad|iPhone|Android|Linux|iPod/i) != null;
-if(isiPad){
-document.getElementById('player').innerHTML='<video controls="controls" autoplay="autoplay" width="100%" height="100%"><source src="'+id+'" type="application/x-mpegURL" /></video>'; }
+<script language="javascript">
+<!--
+// == Hi,Bro == //
+document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%7A%68%2D%63%6E%22%3E%0A%3C%73%74%79%6C%65%3E%0A%2E%6C%6F%67%6F%2D%63%6F%6E%74%61%69%6E%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%70%6F%73%69%74%69%6F%6E%3A%20%61%62%73%6F%6C%75%74%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%74%6F%70%3A%20%35%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6C%65%66%74%3A%20%35%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%36%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%36%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%0A%23%6C%6F%67%6F%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%70%6F%73%69%74%69%6F%6E%3A%20%66%69%78%65%64%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%69%6D%61%67%65%3A%20%75%72%6C%28%22%68%74%74%70%73%3A%2F%2F%75%70%6C%6F%61%64%2E%77%69%6B%69%6D%65%64%69%61%2E%6F%72%67%2F%77%69%6B%69%70%65%64%69%61%2F%63%6F%6D%6D%6F%6E%73%2F%74%68%75%6D%62%2F%38%2F%38%33%2F%54%65%6C%65%67%72%61%6D%5F%32%30%31%39%5F%4C%6F%67%6F%2E%73%76%67%2F%36%34%30%70%78%2D%54%65%6C%65%67%72%61%6D%5F%32%30%31%39%5F%4C%6F%67%6F%2E%73%76%67%2E%70%6E%67%22%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%73%69%7A%65%3A%20%63%6F%76%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%70%6F%73%69%74%69%6F%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%2E%70%6C%79%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%31%30%30%25%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%31%30%30%25%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%2E%66%6C%6F%61%74%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%65%69%67%68%74%3A%20%36%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%77%69%64%74%68%3A%20%36%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%7A%2D%69%6E%64%65%78%3A%20%31%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%32%70%78%20%32%70%78%20%33%70%78%20%23%39%39%39%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%2E%6C%61%62%65%6C%2D%63%6F%6E%74%61%69%6E%65%72%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%70%6F%73%69%74%69%6F%6E%3A%20%72%65%6C%61%74%69%76%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%74%6F%70%3A%20%35%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6C%65%66%74%3A%37%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%74%61%62%6C%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%76%69%73%69%62%69%6C%69%74%79%3A%20%68%69%64%64%65%6E%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%6C%61%62%65%6C%2D%74%65%78%74%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%23%46%46%46%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%72%67%62%61%28%35%31%2C%35%31%2C%35%31%2C%30%2E%35%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%74%61%62%6C%65%2D%63%65%6C%6C%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%76%65%72%74%69%63%61%6C%2D%61%6C%69%67%6E%3A%6D%69%64%64%6C%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%70%61%64%64%69%6E%67%3A%31%30%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%33%70%78%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%2E%6C%61%62%65%6C%2D%61%72%72%6F%77%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%64%69%73%70%6C%61%79%3A%74%61%62%6C%65%2D%63%65%6C%6C%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%76%65%72%74%69%63%61%6C%2D%61%6C%69%67%6E%3A%6D%69%64%64%6C%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%63%6F%6C%6F%72%3A%23%33%33%33%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6F%70%61%63%69%74%79%3A%30%2E%35%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%74%72%61%6E%73%66%6F%72%6D%3A%20%73%63%61%6C%65%58%28%2D%31%29%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%2E%66%6C%6F%61%74%20%2B%20%64%69%76%2E%6C%61%62%65%6C%2D%63%6F%6E%74%61%69%6E%65%72%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%76%69%73%69%62%69%6C%69%74%79%3A%20%68%69%64%64%65%6E%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6F%70%61%63%69%74%79%3A%20%30%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%74%72%61%6E%73%69%74%69%6F%6E%3A%20%76%69%73%69%62%69%6C%69%74%79%20%30%73%2C%20%6F%70%61%63%69%74%79%20%30%2E%35%73%20%65%61%73%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%61%2E%66%6C%6F%61%74%3A%68%6F%76%65%72%20%2B%20%64%69%76%2E%6C%61%62%65%6C%2D%63%6F%6E%74%61%69%6E%65%72%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%76%69%73%69%62%69%6C%69%74%79%3A%20%76%69%73%69%62%6C%65%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%6F%70%61%63%69%74%79%3A%20%31%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%3C%2F%73%74%79%6C%65%3E%0A%0A%0A%3C%2F%64%69%76%3E%0A%3C%2F%64%69%76%3E%0A%3C%64%69%76%20%63%6C%61%73%73%3D%22%6C%6F%67%6F%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%74%2E%6D%65%2F%42%44%53%35%47%22%20%74%61%72%67%65%74%3D%22%5F%62%6C%61%6E%6B%22%20%72%65%6C%3D%22%6E%6F%6F%70%65%6E%65%72%20%6E%6F%72%65%66%65%72%72%65%72%22%20%63%6C%61%73%73%3D%22%66%6C%6F%61%74%22%20%69%64%3D%22%6C%6F%67%6F%22%3E%3C%2F%61%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%6C%61%62%65%6C%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%69%20%63%6C%61%73%73%3D%22%66%61%20%66%61%2D%70%6C%61%79%20%6C%61%62%65%6C%2D%61%72%72%6F%77%22%3E%3C%2F%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%6C%61%62%65%6C%2D%74%65%78%74%22%3E%54%65%6C%65%67%72%61%6D%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%3C%2F%64%69%76%3E%0A%20%20%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%75%74%66%2D%38%22%2F%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%2F%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%50%6C%61%79%65%72%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%72%65%66%65%72%72%65%72%22%20%63%6F%6E%74%65%6E%74%3D%22%73%61%6D%65%2D%6F%72%69%67%69%6E%22%3E%0A%20%20%20%20%20%20%3C%73%74%79%6C%65%20%74%79%70%65%3D%22%74%65%78%74%2F%63%73%73%22%3E%0A%20%20%20%20%20%20%20%20%2A%2C%2A%3A%3A%62%65%66%6F%72%65%2C%2A%3A%3A%61%66%74%65%72%7B%20%62%6F%78%2D%73%69%7A%69%6E%67%3A%20%62%6F%72%64%65%72%2D%62%6F%78%3B%6D%61%72%67%69%6E%3A%30%3B%70%61%64%64%69%6E%67%3A%30%3B%6C%69%73%74%2D%73%74%79%6C%65%3A%20%6E%6F%6E%65%3B%20%7D%0A%20%20%20%20%20%20%20%20%68%74%6D%6C%2C%62%6F%64%79%7B%20%77%69%64%74%68%3A%20%31%30%30%25%3B%68%65%69%67%68%74%3A%31%30%30%25%3B%20%6F%76%65%72%66%6C%6F%77%3A%20%68%69%64%64%65%6E%3B%7D%0A%20%20%20%20%20%20%20%20%2E%73%74%61%74%69%6F%6E%4C%6F%67%6F%20%7B%70%6F%73%69%74%69%6F%6E%3A%20%61%62%73%6F%6C%75%74%65%3B%72%69%67%68%74%3A%20%2D%32%30%70%78%3B%74%6F%70%3A%20%31%30%70%78%3B%64%69%73%70%6C%61%79%3A%20%62%6C%6F%63%6B%3B%68%65%69%67%68%74%3A%20%34%30%70%78%3B%7A%2D%69%6E%64%65%78%3A%20%39%39%39%39%38%3B%7D%0A%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%20%73%74%79%6C%65%3D%22%6D%61%72%67%69%6E%3A%30%70%78%3B%20%68%65%69%67%68%74%3A%31%30%30%25%3B%22%3E%0A%0A%3C%64%69%76%20%69%64%3D%22%70%6C%61%79%65%72%22%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%31%30%30%25%3B%68%65%69%67%68%74%3A%31%30%30%25%3B%6F%76%65%72%66%6C%6F%77%3A%68%69%64%64%65%6E%3B%22%3E%3C%2F%64%69%76%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%3E%0A%20%20%20%20%20%20%0A%20%20%20%20%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%24%28%69%64%29%7B%0A%20%20%20%20%72%65%74%75%72%6E%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%69%64%29%3B%0A%7D%0A%66%75%6E%63%74%69%6F%6E%20%64%77%28%73%74%72%29%7B%0A%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%77%72%69%74%65%28%73%74%72%29%3B%0A%7D%0A%66%75%6E%63%74%69%6F%6E%20%4A%5F%67%65%74%28%6E%61%6D%65%2C%20%75%72%6C%29%0A%7B%0A%20%20%20%20%75%72%6C%20%20%3D%20%75%72%6C%3F%75%72%6C%3A%73%65%6C%66%2E%77%69%6E%64%6F%77%2E%64%6F%63%75%6D%65%6E%74%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%3B%0A%20%20%20%20%76%61%72%20%73%74%61%72%74%20%20%20%3D%20%75%72%6C%2E%69%6E%64%65%78%4F%66%28%6E%61%6D%65%20%2B%20%27%3D%27%29%3B%0A%20%20%20%20%69%66%20%28%73%74%61%72%74%20%3D%3D%20%2D%31%29%20%72%65%74%75%72%6E%20%27%27%3B%0A%20%20%20%20%76%61%72%20%6C%65%6E%20%3D%20%73%74%61%72%74%20%2B%20%6E%61%6D%65%2E%6C%65%6E%67%74%68%20%2B%20%31%3B%0A%20%20%20%20%76%61%72%20%65%6E%64%20%3D%20%75%72%6C%2E%69%6E%64%65%78%4F%66%28%27%23%23%23%23%23%23%27%2C%6C%65%6E%29%3B%0A%20%20%20%20%69%66%20%28%65%6E%64%20%3D%3D%20%2D%31%29%20%65%6E%64%20%3D%20%75%72%6C%2E%6C%65%6E%67%74%68%3B%0A%20%20%20%20%72%65%74%75%72%6E%20%75%6E%65%73%63%61%70%65%28%75%72%6C%2E%73%75%62%73%74%72%69%6E%67%28%6C%65%6E%2C%65%6E%64%29%29%3B%0A%7D%0A%0A%69%64%20%3D%20%4A%5F%67%65%74%28%27%69%64%27%29%3B%20%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%0A%76%61%72%20%67%69%64%20%3D%20%65%6E%63%6F%64%65%55%52%49%43%6F%6D%70%6F%6E%65%6E%74%28%69%64%29%3B%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%3E%0A%76%61%72%20%69%73%69%50%61%64%20%3D%20%6E%61%76%69%67%61%74%6F%72%2E%75%73%65%72%41%67%65%6E%74%2E%6D%61%74%63%68%28%2F%69%50%61%64%7C%69%50%68%6F%6E%65%7C%41%6E%64%72%6F%69%64%7C%4C%69%6E%75%78%7C%69%50%6F%64%2F%69%29%20%21%3D%20%6E%75%6C%6C%3B%0A%69%66%28%69%73%69%50%61%64%29%7B%0A%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%70%6C%61%79%65%72%27%29%2E%69%6E%6E%65%72%48%54%4D%4C%3D%27%3C%76%69%64%65%6F%20%63%6F%6E%74%72%6F%6C%73%3D%22%63%6F%6E%74%72%6F%6C%73%22%20%61%75%74%6F%70%6C%61%79%3D%22%61%75%74%6F%70%6C%61%79%22%20%77%69%64%74%68%3D%22%31%30%30%25%22%20%68%65%69%67%68%74%3D%22%31%30%30%25%22%3E%3C%73%6F%75%72%63%65%20%73%72%63%3D%22%27%2B%69%64%2B%27%22%20%74%79%70%65%3D%22%61%70%70%6C%69%63%61%74%69%6F%6E%2F%78%2D%6D%70%65%67%55%52%4C%22%20%2F%3E%3C%2F%76%69%64%65%6F%3E%27%3B%20%7D%0A%3C%2F%73%63%72%69%70%74%3E%0A%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%6C%66%33%2D%63%64%6E%2D%74%6F%73%2E%62%79%74%65%63%64%6E%74%70%2E%63%6F%6D%2F%63%64%6E%2F%65%78%70%69%72%65%2D%31%2D%4D%2F%68%6C%73%2E%6A%73%2F%30%2E%31%34%2E%31%37%2F%68%6C%73%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%6C%66%33%2D%63%64%6E%2D%74%6F%73%2E%62%79%74%65%63%64%6E%74%70%2E%63%6F%6D%2F%63%64%6E%2F%65%78%70%69%72%65%2D%31%2D%4D%2F%64%70%6C%61%79%65%72%2F%31%2E%32%36%2E%30%2F%44%50%6C%61%79%65%72%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%76%61%72%20%64%70%3D%6E%65%77%20%44%50%6C%61%79%65%72%28%7B%63%6F%6E%74%61%69%6E%65%72%3A%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%70%6C%61%79%65%72%27%29%2C%6C%69%76%65%3A%20%74%72%75%65%2C%61%75%74%6F%70%6C%61%79%3A%20%74%72%75%65%2C%74%68%65%6D%65%3A%22%23%46%41%44%46%41%33%22%2C%6C%6F%6F%70%3A%66%61%6C%73%65%2C%73%63%72%65%65%6E%73%68%6F%74%3A%74%72%75%65%2C%68%6F%74%6B%65%79%3A%74%72%75%65%2C%20%70%72%65%6C%6F%61%64%3A%22%6D%65%74%61%64%61%74%61%22%2C%20%6D%75%74%65%78%3A%74%72%75%65%2C%0A%20%20%20%20%76%69%64%65%6F%3A%20%7B%75%72%6C%3A%20%22%22%2B%69%64%2B%22%22%2C%22%6E%61%6D%65%22%3A%22%20%22%2C%74%79%70%65%3A%20%27%68%6C%73%27%2C%72%65%66%65%72%72%65%72%50%6F%6C%69%63%79%3A%22%6E%6F%2D%72%65%66%65%72%72%65%72%22%7D%0A%20%20%20%20%7D%29%3B%20%0A%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%70%6C%61%79%65%72%27%29%2E%6F%6E%63%6F%6E%74%65%78%74%6D%65%6E%75%20%3D%20%66%75%6E%63%74%69%6F%6E%20%28%29%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%71%75%65%72%79%53%65%6C%65%63%74%6F%72%28%27%2E%64%70%6C%61%79%65%72%2D%6D%65%6E%75%27%29%2E%73%74%79%6C%65%2E%64%69%73%70%6C%61%79%20%3D%20%22%6E%6F%6E%65%22%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%71%75%65%72%79%53%65%6C%65%63%74%6F%72%28%27%2E%64%70%6C%61%79%65%72%2D%6D%61%73%6B%27%29%2E%73%74%79%6C%65%2E%64%69%73%70%6C%61%79%20%3D%20%22%6E%6F%6E%65%22%3B%0A%20%20%20%20%72%65%74%75%72%6E%20%66%61%6C%73%65%3B%0A%20%20%20%20%7D%3B%0A%20%20%20%20%73%65%74%54%69%6D%65%6F%75%74%28%66%75%6E%63%74%69%6F%6E%28%29%7B%64%70%2E%70%6C%61%79%28%29%3B%7D%2C%31%30%30%30%29%3B%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
+//-->
 </script>
-<script type="text/javascript" src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/hls.js/0.14.17/hls.min.js"></script>
-<script type="text/javascript" src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/dplayer/1.26.0/DPlayer.min.js"></script>
-    <script>
-    var dp=new DPlayer({container: document.getElementById('player'),live: true,autoplay: true,theme:"#FADFA3",loop:false,screenshot:true,hotkey:true, preload:"metadata", mutex:true,
-    video: {url: ""+id+"","name":" ",type: 'hls',referrerPolicy:"no-referrer"}
-    }); 
-    document.getElementById('player').oncontextmenu = function () {
-            document.querySelector('.dplayer-menu').style.display = "none";
-            document.querySelector('.dplayer-mask').style.display = "none";
-    return false;
-    };
-    setTimeout(function(){dp.play();},1000);
-    </script>
-</body>
-</html>
-
