--- a/cricket.html
+++ b/cricket.html
@@ -1,11 +1,119 @@
-<script language="javascript">
+<!DOCTYPE html>
+<html>
+  <style>
+.logo-container {
+                position: absolute;
+                top: 5px;
+                left: 5px;
+                width: 60px;
+                height: 60px;
+            }
 
-<!--
+#logo {
+                position: fixed;
+                background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/640px-Telegram_2019_Logo.svg.png");
+                background-size: cover;
+                background-position: center;
+            }
+   .plyr {
+                height: 100%;
+                width: 100%;
+            }
+.float {
+                height: 60px;
+                width: 60px;
+                z-index: 10;
+                border-radius: 50px;
+                box-shadow: 2px 2px 3px #999;
+            }
+.label-container{
+             position: relative;
+                top: 5px;
+                left:70px;
+                display:table;
+                visibility: hidden;
+            }
 
-// ==Hi,bro== //
+            .label-text{
+                color:#FFF;
+                background:rgba(51,51,51,0.5);
+                display:table-cell;
+                vertical-align:middle;
+                padding:10px;
+                border-radius:3px;
+            }
 
-document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%3E%0A%3C%6D%61%72%71%75%65%65%20%62%65%68%61%76%69%6F%72%3D%22%73%63%72%6F%6C%6C%22%20%64%69%72%65%63%74%69%6F%6E%3D%22%6C%65%66%74%22%62%67%63%6F%6C%6F%72%3D%22%64%65%65%70%62%6C%75%65%22%3E%4A%4F%49%4E%20%4F%55%52%20%4F%46%46%49%43%49%41%4C%20%54%45%4C%45%47%52%41%4D%20%43%48%41%4E%4E%45%4C%20%46%4F%52%20%41%4C%4C%20%4B%49%4E%44%53%20%4F%46%20%53%50%4F%52%54%53%20%4C%49%4E%4B%53%2E%2E%2E%2E%2E%3C%2F%6D%61%72%71%75%65%65%3E%0A%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%53%4B%59%20%53%70%6F%72%74%73%20%43%72%69%63%6B%65%74%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%69%63%6F%6E%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%77%77%77%2E%74%61%74%61%70%6C%61%79%2E%63%6F%6D%2F%61%73%73%65%74%73%2F%66%61%76%69%63%6F%6E%2E%69%63%6F%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%72%6F%62%6F%74%73%22%20%63%6F%6E%74%65%6E%74%3D%22%6E%6F%69%6E%64%65%78%2C%20%6E%6F%66%6F%6C%6C%6F%77%22%20%2F%3E%0A%20%20%20%20%3C%6D%65%74%61%20%68%74%74%70%2D%65%71%75%69%76%3D%22%43%6F%6E%74%65%6E%74%2D%54%79%70%65%22%20%63%6F%6E%74%65%6E%74%3D%22%74%65%78%74%2F%68%74%6D%6C%3B%20%63%68%61%72%73%65%74%3D%75%74%66%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%68%74%74%70%2D%65%71%75%69%76%3D%22%58%2D%55%41%2D%43%6F%6D%70%61%74%69%62%6C%65%22%20%63%6F%6E%74%65%6E%74%3D%22%49%45%3D%65%64%67%65%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2C%20%73%68%72%69%6E%6B%2D%74%6F%2D%66%69%74%3D%6E%6F%22%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%74%79%70%65%3D%22%74%65%78%74%2F%63%73%73%22%20%68%72%65%66%3D%22%73%74%79%6C%65%2E%63%73%73%22%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%27%68%74%74%70%73%3A%2F%2F%63%64%6E%2E%6A%73%64%65%6C%69%76%72%2E%6E%65%74%2F%6E%70%6D%2F%64%69%73%61%62%6C%65%2D%64%65%76%74%6F%6F%6C%2F%64%69%73%61%62%6C%65%2D%64%65%76%74%6F%6F%6C%2E%6D%69%6E%2E%6A%73%27%3E%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%68%65%61%64%3E%0A%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%4D%48%44%5A%75%62%61%69%72%2E%74%6F%70%2F%6D%79%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%64%69%76%20%69%64%3D%22%6A%77%70%6C%61%79%65%72%44%69%76%22%3E%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%4A%61%76%61%53%63%72%69%70%74%22%20%64%65%66%65%72%3E%0A%20%20%20%20%20%20%20%20%0A%20%20%20%20%6A%77%70%6C%61%79%65%72%28%22%6A%77%70%6C%61%79%65%72%44%69%76%22%29%2E%73%65%74%75%70%28%7B%0A%20%20%20%20%20%20%20%20%61%75%74%6F%73%74%61%72%74%3A%20%74%72%75%65%2C%0A%20%20%20%20%20%20%20%20%70%69%70%49%63%6F%6E%3A%20%22%65%6E%61%62%6C%65%64%22%2C%0A%20%20%20%20%20%20%20%20%74%69%74%6C%65%3A%20%22%53%6B%79%20%53%70%6F%72%74%73%20%43%72%69%63%6B%65%74%22%2C%0A%20%20%20%20%20%20%20%20%6C%6F%67%6F%3A%20%7B%20%66%69%6C%65%3A%20%22%6C%22%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%68%69%64%65%3A%20%22%74%72%75%65%22%20%7D%2C%0A%20%20%20%20%20%20%20%20%66%69%6C%65%3A%20%22%68%74%74%70%73%3A%2F%2F%6C%69%6E%65%61%72%30%30%33%2D%67%62%2D%64%61%73%68%31%2D%70%72%64%2D%63%66%2E%63%64%6E%2E%73%6B%79%63%64%70%2E%63%6F%6D%2F%30%31%36%61%2F%43%6F%6E%74%65%6E%74%2F%44%41%53%48%5F%30%30%33%5F%73%64%2F%4C%69%76%65%2F%63%68%61%6E%6E%65%6C%28%73%6B%79%73%70%6F%72%74%73%63%72%69%63%6B%65%74%29%2F%6D%61%6E%69%66%65%73%74%5F%73%64%2E%6D%70%64%22%2C%0A%20%20%20%20%20%20%20%20%64%72%6D%3A%20%7B%0A%20%20%20%20%20%20%20%20%20%20%20%20%63%6C%65%61%72%6B%65%79%3A%20%7B%0A%20%0A%22%6B%65%79%49%64%22%3A%0A%22%30%30%30%33%66%32%61%37%32%64%32%31%65%66%64%31%35%39%64%34%35%61%33%61%37%34%64%65%63%64%38%34%22%2C%0A%0A%22%6B%65%79%22%3A%0A%22%64%66%30%65%63%34%30%35%38%36%64%36%34%31%66%33%64%34%37%32%38%61%62%35%66%64%36%32%61%64%63%33%22%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%29%3B%0A%3C%2F%73%63%72%69%70%74%3E%0A%0A%3C%61%20%73%74%79%6C%65%3D%22%64%69%73%70%6C%61%79%3A%62%6C%6F%63%6B%3B%66%6F%6E%74%2D%73%69%7A%65%3A%31%36%70%78%3B%66%6F%6E%74%2D%77%65%69%67%68%74%3A%35%30%30%3B%74%65%78%74%2D%61%6C%69%67%6E%3A%63%65%6E%74%65%72%3B%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%38%70%78%3B%70%61%64%64%69%6E%67%3A%35%70%78%3B%62%61%63%6B%67%72%6F%75%6E%64%3A%23%33%38%39%63%65%39%3B%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%6E%6F%6E%65%3B%63%6F%6C%6F%72%3A%23%66%66%66%3B%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%74%2E%6D%65%2F%2B%58%70%49%46%73%4A%50%46%48%68%41%77%4E%54%46%6C%22%20%74%61%72%67%65%74%3D%22%5F%62%6C%61%6E%6B%22%3E%3C%73%76%67%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%33%30%70%78%3B%68%65%69%67%68%74%3A%35%30%70%78%3B%76%65%72%74%69%63%61%6C%2D%61%6C%69%67%6E%3A%6D%69%64%64%6C%65%3B%6D%61%72%67%69%6E%3A%30%70%78%20%35%70%78%3B%22%20%76%69%65%77%42%6F%78%3D%22%30%20%30%20%32%31%20%31%38%22%3E%3C%67%20%66%69%6C%6C%3D%22%6E%6F%6E%65%22%3E%3C%70%61%74%68%20%66%69%6C%6C%3D%22%23%66%66%66%66%66%66%22%20%64%3D%22%4D%30%2E%35%35%34%2C%37%2E%30%39%32%20%4C%31%39%2E%31%31%37%2C%30%2E%30%37%38%20%43%31%39%2E%37%33%37%2C%2D%30%2E%31%35%36%20%32%30%2E%34%32%39%2C%30%2E%31%35%36%20%32%30%2E%36%36%33%2C%30%2E%37%37%36%20%43%32%30%2E%37%34%35%2C%30%2E%39%39%34%20%32%30%2E%37%36%33%2C%31%2E%32%33%20%32%30%2E%37%31%33%2C%31%2E%34%35%37%20%4C%31%37%2E%35%31%33%2C%31%36%2E%30%35%39%20%43%31%37%2E%33%35%31%2C%31%36%2E%37%39%39%20%31%36%2E%36%32%2C%31%37%2E%32%36%38%20%31%35%2E%38%38%2C%31%37%2E%31%30%35%20%43%31%35%2E%36%39%36%2C%31%37%2E%30%36%35%20%31%35%2E%35%32%33%2C%31%36%2E%39%38%37%20%31%35%2E%33%37%2C%31%36%2E%38%37%37%20%4C%38%2E%39%39%37%2C%31%32%2E%32%37%31%20%43%38%2E%36%31%34%2C%31%31%2E%39%39%34%20%38%2E%35%32%37%2C%31%31%2E%34%35%38%20%38%2E%38%30%35%2C%31%31%2E%30%37%34%20%43%38%2E%38%33%35%2C%31%31%2E%30%33%33%20%38%2E%38%36%39%2C%31%30%2E%39%39%34%20%38%2E%39%30%35%2C%31%30%2E%39%35%38%20%4C%31%35%2E%34%35%38%2C%34%2E%36%36%31%20%43%31%35%2E%35%39%34%2C%34%2E%35%33%20%31%35%2E%35%39%38%2C%34%2E%33%31%33%20%31%35%2E%34%36%37%2C%34%2E%31%37%36%20%43%31%35%2E%33%35%34%2C%34%2E%30%35%39%20%31%35%2E%31%37%34%2C%34%2E%30%33%37%20%31%35%2E%30%33%36%2C%34%2E%31%32%35%20%4C%36%2E%31%30%34%2C%39%2E%37%39%35%20%43%35%2E%35%37%35%2C%31%30%2E%31%33%31%20%34%2E%39%32%32%2C%31%30%2E%32%30%37%20%34%2E%33%32%39%2C%31%30%2E%30%30%32%20%4C%30%2E%35%37%37%2C%38%2E%37%30%34%20%43%30%2E%31%33%2C%38%2E%35%35%20%2D%30%2E%31%30%37%2C%38%2E%30%36%31%20%30%2E%30%34%37%2C%37%2E%36%31%34%20%43%30%2E%31%33%31%2C%37%2E%33%37%34%20%30%2E%33%31%36%2C%37%2E%31%38%32%20%30%2E%35%35%34%2C%37%2E%30%39%32%20%5A%22%3E%3C%2F%70%61%74%68%3E%3C%2F%67%3E%3C%2F%73%76%67%3E%4A%4F%49%4E%20%55%53%20%4F%4E%20%54%45%4C%45%47%52%41%4D%3C%2F%61%3E%0A%0A%0A%3C%2F%62%6F%64%79%3E%0A%0A%3C%2F%68%74%6D%6C%3E'));
+            .label-arrow{
+                display:table-cell;
+                vertical-align:middle;
+                color:#333;
+                opacity:0.5;
+                transform: scaleX(-1);
+            }
 
-//-->
+            a.float + div.label-container {
+              visibility: hidden;
+              opacity: 0;
+              transition: visibility 0s, opacity 0.5s ease;
+            }
 
+            a.float:hover + div.label-container{
+              visibility: visible;
+              opacity: 1;
+            }
+</style>
+
+
+</div>
+</div>
+<div class="logo-container">
+ <a href="https://t.me/BDS5G" target="_blank" rel="noopener noreferrer" class="float" id="logo"></a>
+            <div class="label-container">
+                <i class="fa fa-play label-arrow"></i>
+                <div class="label-text">Telegram</div>
+            </div>
+</div>
+  
+<head>
+    <title>SKY Sports Cricket</title>
+    <link rel="icon" href="https://www.tataplay.com/assets/favicon.ico">
+    <meta name="robots" content="noindex, nofollow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
+</head>
+
+<body>
+    <script src="https://MHDZubair.top/my.js"></script>
+    <div id="jwplayerDiv"></div>
+    <script type="text/JavaScript" defer>
+        
+    jwplayer("jwplayerDiv").setup({
+        autostart: true,
+        pipIcon: "enabled",
+        title: "Sky Sports Cricket",
+        logo: { file: "l",
+                hide: "true" },
+        file: "https://linear003-gb-dash1-prd-cf.cdn.skycdp.com/016a/Content/DASH_003_sd/Live/channel(skysportscricket)/manifest_sd.mpd",
+        drm: {
+            clearkey: {
+ 
+"keyId":
+"0003f2a72d21efd159d45a3a74decd84",
+
+"key":
+"df0ec40586d641f3d4728ab5fd62adc3"
+
+            }
+        }
+    });
 </script>
+
+<a style="display:block;font-size:16px;font-weight:500;text-align:center;border-radius:8px;padding:5px;background:#389ce9;text-decoration:none;color:#fff;" href="https://t.me/+XpIFsJPFHhAwNTFl" target="_blank"><svg style="width:30px;height:50px;vertical-align:middle;margin:0px 5px;" viewBox="0 0 21 18"><g fill="none"><path fill="#ffffff" d="M0.554,7.092 L19.117,0.078 C19.737,-0.156 20.429,0.156 20.663,0.776 C20.745,0.994 20.763,1.23 20.713,1.457 L17.513,16.059 C17.351,16.799 16.62,17.268 15.88,17.105 C15.696,17.065 15.523,16.987 15.37,16.877 L8.997,12.271 C8.614,11.994 8.527,11.458 8.805,11.074 C8.835,11.033 8.869,10.994 8.905,10.958 L15.458,4.661 C15.594,4.53 15.598,4.313 15.467,4.176 C15.354,4.059 15.174,4.037 15.036,4.125 L6.104,9.795 C5.575,10.131 4.922,10.207 4.329,10.002 L0.577,8.704 C0.13,8.55 -0.107,8.061 0.047,7.614 C0.131,7.374 0.316,7.182 0.554,7.092 Z"></path></g></svg>JOIN US ON TELEGRAM</a>
+
+
+</body>
+
+</html>
